<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dreambox++</string>
    
    <string name="infoType1">Yes/No</string>  
    <string name="infoType2">Info</string>  
    <string name="infoType3">Message</string>
    <string name="infoType4">Attention</string>
    
    <string name="ipAddress">Connection addresses</string>
    <string name="ipAddress2">Connection address 2</string>
    
    <string name="message">Message</string>
    
    <string name="pickMessage">Pick message</string>
    
    <string name="saveMessage">Save message</string>
    <string name="send">Send</string>
    
    <string name="testConnection">Test connection</string>
    <string name="messageType">Message type</string>
    <string name="timeout">Timeout (secs)</string>
    <string name="portNumber">Port number</string>
    <string name="saveSettingsButton">Save</string>
    <string name="manageMessages">Manage messages</string>
    <string name="addCategory">Add category</string>
    <string name="deleteCategory">Delete category</string>
    <string name="addMessage">Add message</string>
    <string name="categoriesTitle">Categories</string>
    <string name="messagesTitle">Messages</string>
    <string name="deleteMessages">Delete message</string>
    <string name="reply">Get response</string>
    <string name="response">Get response</string>
    </resources>