<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/categoriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoriesTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/addCategoryEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/addCategoryButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addCategory" />

    <Button
        android:id="@+id/deleteCategoryButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteCategory" />

    <TextView
        android:id="@+id/messagesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messagesTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/addMessageEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/addMessageButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addMessage" />

    <Button
        android:id="@+id/deleteMessagesButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteMessages" />

</LinearLayout>