<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

  <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/message"
      android:textAppearance="?android:attr/textAppearanceSmall" />

  <EditText
	    android:id="@+id/SendMessageEditText"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text" />

  <TableLayout
 	    android:id="@+id/tableLayout1"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content">

      <TableRow
          android:id="@+id/tableRow3"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" >

          <Button
              android:id="@+id/saveMessageButton"
              android:layout_width="0dp"
              android:layout_height="wrap_content" 
              android:text="@string/saveMessage" 
              android:layout_weight="0.33"/>

          <Button
              android:id="@+id/manageMessagesButton"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:text="@string/manageMessages" 
              android:layout_weight="0.33"/>

          <Button
              android:id="@+id/messagePickerButton"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:text="@string/pickMessage" 
              android:layout_weight="0.33"/>

      </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

      <TextView
        android:id="@+id/textView2"
        android:layout_height="wrap_content"
        android:text="@string/messageType"
        android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="0dp" android:layout_weight="0.7"/>

      <TextView
		 	    android:id="@+id/textView3"
		 	    android:layout_width="0dp"
		 	    android:layout_height="wrap_content"
		 	    android:text="@string/timeout"
		 	    android:textAppearance="?android:attr/textAppearanceSmall" android:layout_weight="0.3"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

      <Spinner android:id="@+id/SpinnerInfoType"
          android:layout_height="wrap_content"
          android:entries="@array/infoTypeList" android:layout_width="0dp" android:layout_weight="0.7"/>

      <EditText
          android:id="@+id/timeoutEdit"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.3"
          android:inputType="number">

        <requestFocus />
      </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">    
        
        <Button
        android:id="@+id/SendMessageButton"
        android:layout_height="wrap_content"
        android:text="@string/send" 
        android:layout_width="0dp" 
        android:layout_weight="0.5"/>
    
    <Button
        android:id="@+id/ResponseMessageButton"
        android:layout_height="wrap_content"
        android:text="@string/response" 
        android:layout_width="0dp" 
        android:layout_weight="0.5"/> 
        </TableRow>
  </TableLayout>

  <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

    
    
  </LinearLayout>
</LinearLayout>